cabal-version: 3.0
name: os-string-io
version: 0.1.0.0
-- synopsis:
-- description:
license: MIT
license-file: LICENSE
author: 0rphee
maintainer: 0rph3e@proton.me
-- copyright:
category: Text
build-type: Simple
extra-doc-files: CHANGELOG.md
tested-with: ghc ==9.8.4

-- extra-source-files:
common warnings
  ghc-options: -Wall

library
  import: warnings
  exposed-modules: System.OsString.IO
  -- other-modules:
  -- other-extensions:
  build-depends:
    base,
    bytestring >= 0.12 && < 0.13,
    os-string,

  if impl(ghc <9.4)
    build-depends:
      data-array-byte

  hs-source-dirs: src
  default-language: Haskell2010

test-suite os-string-io-test
  import: warnings
  default-language: Haskell2010
  -- other-modules:
  -- other-extensions:
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  build-depends:
    base ^>=4.19.2.0,
    os-string-io,
